--- a/transformers_pytorch_.ipynb
+++ b/transformers_pytorch_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfPf/w2dFYYM1YCYu8eqRW",
+      "authorship_tag": "ABX9TyPTpe/6L6d8USmylSOXMsoD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,12 +50,13 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "np.random.seed(42)"
+        "np.random.seed(42)\n",
+        "from torch import nn\n"
       ],
       "metadata": {
         "id": "yzTCG9iVwoZe"
       },
-      "execution_count": 1,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -77,7 +78,7 @@
         "id": "YKduxupwvYgF",
         "outputId": "fb48649f-5913-4fcd-80bd-e95fe1dfa397"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +100,7 @@
       "metadata": {
         "id": "Ik2DzRnGxADa"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +115,7 @@
         "id": "J-guacgexRny",
         "outputId": "5ad68669-fbb3-4768-fe2a-af2e30224490"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +153,7 @@
         "id": "zku8qhhFxWF6",
         "outputId": "4fd16fe8-9f9b-44f9-df5d-ecfd0ab4d01a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +177,7 @@
       "metadata": {
         "id": "PR23S76xykgl"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +188,7 @@
       "metadata": {
         "id": "ww-g18Fpyxex"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,18 +196,23 @@
       "source": [
         "## Softmax\n",
         "def softmax(x):\n",
-        "    return(np.exp(x)/np.exp(x).sum())\n",
-        "scaled_QK = softmax(QK)"
+        "    e_x = np.exp(x - np.max(x))\n",
+        "    print(e_x.shape)\n",
+        "    res =  e_x / e_x.sum(axis=0) # only difference\n",
+        "    print(res.shape)\n",
+        "    return res\n",
+        "    "
       ],
       "metadata": {
         "id": "M1u6W0dIy4OX"
       },
-      "execution_count": 10,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "scaled_QK = softmax(QK)\n",
         "QK.shape"
       ],
       "metadata": {
@@ -216,7 +222,7 @@
         "id": "qQ2S9x_94rnS",
         "outputId": "ad92233a-9b6d-4bdb-a422-3f945f601d53"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,27 +239,27 @@
     {
       "cell_type": "code",
       "source": [
-        "K = np.dot(X, Wk)"
+        "V = np.dot(X, Wv)"
       ],
       "metadata": {
         "id": "ku7BoWfc42iz"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "K.shape"
+        "V.shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KvJUG_b65DRx",
-        "outputId": "5ec5b3a7-b979-4353-aaef-0244d4f05eb2"
+        "outputId": "29f82565-ab9d-475d-eb7f-66ce652f8554"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,19 +269,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 22
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "QKV = np.dot(scaled_QK, K)"
+        "QKV = np.dot(scaled_QK, V)"
       ],
       "metadata": {
         "id": "Tkjy0r0C0CTZ"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +296,7 @@
         "id": "LceO5GXk0N_v",
         "outputId": "45ec67d6-fd79-4d74-dfe5-e4f1b14eb1b7"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,6 +315,399 @@
       "source": [],
       "metadata": {
         "id": "jK2EEjkK5LcL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Create function for self attention"
+      ],
+      "metadata": {
+        "id": "5BvXZ21m5kX1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def scaled_self_attention(query, key, value):\n",
+        "  key_dim = key.shape[1]\n",
+        "  QK = np.dot(query,key.T)\n",
+        "  #/np.sqrt(key_dim)\n",
+        "  print(\"---\")\n",
+        "  print(QK.shape)\n",
+        "  #sf = nn.Softmax( dim=1)\n",
+        "  scaled_QK = softmax(QK)\n",
+        "  print(scaled_QK.shape)\n",
+        "  QKV = np.dot(scaled_QK, value)\n",
+        "  print(QKV.shape)\n",
+        "  return QKV, scaled_QK"
+      ],
+      "metadata": {
+        "id": "yzF3cQ4F5qhs"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scaled_self_attention(Q, K, V)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sA4a3K2-62_p",
+        "outputId": "0729ae5a-c71d-4413-c555-2f9d54048f4b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[ 6.59297357e-47,  6.11623018e-47,  2.09227010e-46,\n",
+              "          1.90797248e-46, -1.28153513e-47, -1.09696246e-46,\n",
+              "          2.74316935e-47, -6.58638251e-47, -1.39020227e-46,\n",
+              "          2.01060110e-46,  7.13266126e-47, -1.89522458e-46],\n",
+              "        [ 5.41346164e-40,  4.36153826e-40,  1.57390668e-39,\n",
+              "          1.45347501e-39, -7.28558597e-41, -8.25978126e-40,\n",
+              "          1.33804646e-40, -5.33975408e-40, -1.09072760e-39,\n",
+              "          1.56123496e-39,  5.51334414e-40, -1.46958532e-39],\n",
+              "        [-8.43764302e+00,  8.77144346e+00, -9.46910444e-01,\n",
+              "          2.97250628e+00,  2.36695398e+00, -3.98113213e+00,\n",
+              "         -2.28811882e+00,  4.45762186e+00,  4.50286565e+00,\n",
+              "          1.52476604e+00,  2.72580162e+00, -3.35865925e-01],\n",
+              "        [ 7.66125828e-32, -3.30838028e-32,  8.32463766e-32,\n",
+              "          1.97255430e-32, -6.90215186e-32, -3.29037147e-31,\n",
+              "         -6.06296034e-32,  1.18175743e-31,  1.12543985e-31,\n",
+              "          4.17384358e-32,  1.40384174e-31, -3.48219463e-32]]),\n",
+              " array([[9.02178750e-65, 3.96121058e-47, 5.14271272e-65, 9.66142092e-49],\n",
+              "        [6.70014723e-63, 3.04006206e-40, 3.70511420e-48, 2.96643146e-54],\n",
+              "        [1.32347586e-49, 6.87231950e-52, 1.00000000e+00, 3.95675085e-14],\n",
+              "        [7.70681336e-32, 6.22393931e-53, 3.51300617e-43, 1.95615720e-71]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Multi head attention"
+      ],
+      "metadata": {
+        "id": "g2ar1x7v6_A6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seq_len = 3\n",
+        "embed_dim = 4\n",
+        "\n",
+        "queries = np.random.rand(seq_len, embed_dim)\n",
+        "keys = np.random.rand(seq_len, embed_dim)\n",
+        "values = np.random.rand(seq_len, embed_dim)\n",
+        "\n",
+        "print(\"Queries:\\n\", queries)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0CfIr4CFjXb3",
+        "outputId": "6c3b995f-2512-4ac5-b843-e8d2815f7261"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Queries:\n",
+            " [[0.28484049 0.03688695 0.60956433 0.50267902]\n",
+            " [0.05147875 0.27864646 0.90826589 0.23956189]\n",
+            " [0.14489487 0.48945276 0.98565045 0.24205527]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "output, attn_weights = scaled_self_attention(queries, keys, values)\n",
+        "\n",
+        "print(\"Output\\n\", output, \"\\n\")\n",
+        "print(\"Weights\\n\", attn_weights)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C9fmX9ksjhKf",
+        "outputId": "c2e6c600-b144-4a9b-c746-3652065202a3"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(3, 3)\n",
+            "(3, 3)\n",
+            "Output\n",
+            " [[0.34046052 0.3583313  0.65012393 0.09111357]\n",
+            " [0.40349096 0.37504672 0.71582375 0.1059299 ]\n",
+            " [0.49985446 0.47074605 0.89351946 0.13143174]] \n",
+            "\n",
+            "Weights\n",
+            " [[0.3254204  0.28426828 0.26285964]\n",
+            " [0.29641855 0.31901007 0.33004653]\n",
+            " [0.37816105 0.39672165 0.40709382]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size = 1\n",
+        "seq_len = 4\n",
+        "embed_dim = 12\n",
+        "num_heads = 3\n",
+        "head_dim = embed_dim // num_heads"
+      ],
+      "metadata": {
+        "id": "9LUB1quz7qhB"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.random.rand(batch_size, seq_len, embed_dim).round(1)\n",
+        "print(\"Input shape: \", x.shape, \"\\n\")\n",
+        "print(\"Input:\\n\", x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uz3YSeXMkAQe",
+        "outputId": "b3fa3347-1ce0-455c-ffa0-9180ddde2f74"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input shape:  (1, 3, 4) \n",
+            "\n",
+            "Input:\n",
+            " [[[0.3 0.1 0.9 0.9]\n",
+            "  [0.3 0.7 0.8 0.6]\n",
+            "  [0.5 0.2 0.1 0.9]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The query weights for each head.\n",
+        "wq0 = np.random.rand(embed_dim, head_dim).round(1)\n",
+        "wq1 = np.random.rand(embed_dim, head_dim).round(1)\n",
+        "wq2 = np.random.rand(embed_dim, head_dim).round(1)\n",
+        "\n",
+        "# The key weights for each head. \n",
+        "wk0 = np.random.rand(embed_dim, head_dim).round(1)\n",
+        "wk1 = np.random.rand(embed_dim, head_dim).round(1)\n",
+        "wk2 = np.random.rand(embed_dim, head_dim).round(1)\n",
+        "\n",
+        "# The value weights for each head.\n",
+        "wv0 = np.random.rand(embed_dim, head_dim).round(1)\n",
+        "wv1 = np.random.rand(embed_dim, head_dim).round(1)\n",
+        "wv2 = np.random.rand(embed_dim, head_dim).round(1)"
+      ],
+      "metadata": {
+        "id": "aAiaF8c2kAz6"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The three sets of query weights (one for each head):\")\n",
+        "print(\"wq0:\\n\", wq0)\n",
+        "print(\"wq1:\\n\", wq1)\n",
+        "print(\"wq2:\\n\", wq1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bNoJdAvmkEUX",
+        "outputId": "b4737103-687d-48d5-afce-da6271800719"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The three sets of query weights (one for each head):\n",
+            "wq0:\n",
+            " [[0.9 0.6 0.3 0.3]\n",
+            " [0.7 0.9 0.9 0.8]\n",
+            " [0.6 0.1 0.2 0.9]\n",
+            " [0.6 0.  0.1 0.7]]\n",
+            "wq1:\n",
+            " [[0.  0.2 0.5 0.7]\n",
+            " [0.7 0.2 0.7 0.2]\n",
+            " [0.3 0.7 0.6 0.8]\n",
+            " [0.7 0.6 0.1 0.4]]\n",
+            "wq2:\n",
+            " [[0.  0.2 0.5 0.7]\n",
+            " [0.7 0.2 0.7 0.2]\n",
+            " [0.3 0.7 0.6 0.8]\n",
+            " [0.7 0.6 0.1 0.4]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Geneated queries, keys, and values for the first head.\n",
+        "q0 = np.dot(x, wq0)\n",
+        "k0 = np.dot(x, wk0)\n",
+        "v0 = np.dot(x, wv0)\n",
+        "\n",
+        "# Geneated queries, keys, and values for the second head.\n",
+        "q1 = np.dot(x, wq1)\n",
+        "k1 = np.dot(x, wk1)\n",
+        "v1 = np.dot(x, wv1)\n",
+        "\n",
+        "# Geneated queries, keys, and values for the third head.\n",
+        "q2 = np.dot(x, wq2)\n",
+        "k2 = np.dot(x, wk2)\n",
+        "v2 = np.dot(x, wv2)"
+      ],
+      "metadata": {
+        "id": "_2A-4jKUkGaH"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Q, K, and V for first head:\\n\")\n",
+        "\n",
+        "print(f\"q0 {q0.shape}:\\n\", q0, \"\\n\")\n",
+        "print(f\"k0 {k0.shape}:\\n\", k0, \"\\n\")\n",
+        "print(f\"v0 {v0.shape}:\\n\", v0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UQYOlM3kkIsU",
+        "outputId": "16744f63-82e0-4b27-d072-283a33f1ea71"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Q, K, and V for first head:\n",
+            "\n",
+            "q0 (1, 3, 4):\n",
+            " [[[1.42 0.36 0.45 1.61]\n",
+            "  [1.6  0.89 0.94 1.79]\n",
+            "  [1.19 0.49 0.44 1.03]]] \n",
+            "\n",
+            "k0 (1, 3, 4):\n",
+            " [[[1.98 1.47 0.76 1.12]\n",
+            "  [1.61 1.83 0.91 1.5 ]\n",
+            "  [1.36 1.04 0.74 0.98]]] \n",
+            "\n",
+            "v0 (1, 3, 4):\n",
+            " [[[0.98 0.85 1.   0.68]\n",
+            "  [1.35 0.92 0.85 0.79]\n",
+            "  [0.48 0.85 0.53 0.65]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "def scaled_dot_product_attention(query, key, value, mask=None):\n",
+        "  key_dim = tf.cast(tf.shape(key)[-1], tf.float32)\n",
+        "  scaled_scores = tf.matmul(query, key, transpose_b=True) / np.sqrt(key_dim)\n",
+        "\n",
+        "  if mask is not None:\n",
+        "    scaled_scores = tf.where(mask==0, -np.inf, scaled_scores)\n",
+        "\n",
+        "  softmax = tf.keras.layers.Softmax()\n",
+        "  weights = softmax(scaled_scores) \n",
+        "  return tf.matmul(weights, value), weights"
+      ],
+      "metadata": {
+        "id": "uEOedj2OqAdD"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "out0, attn_weights0 = scaled_self_attention(q0, k0, v0)\n",
+        "\n",
+        "print(\"Output from first attention head: \", out0, \"\\n\")\n",
+        "print(\"Attention weights from first head: \", attn_weights0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 373
+        },
+        "id": "SUPN8epUkK0V",
+        "outputId": "294a6197-07a0-4897-9ccd-6bec84238496"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-73-98ce7d93a6c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mout0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattn_weights0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscaled_self_attention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Output from first attention head: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Attention weights from first head: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattn_weights0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-72-dcee5b4c017e>\u001b[0m in \u001b[0;36mscaled_self_attention\u001b[0;34m(query, key, value)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mscaled_self_attention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mkey_dim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mQK\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0;31m#/np.sqrt(key_dim)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"---\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mdot\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: shapes (1,3,4) and (4,3,1) not aligned: 4 (dim 2) != 3 (dim 1)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "y74xrI-wkPMc"
       },
       "execution_count": null,
       "outputs": []
